# polymath_code_standard

./: .clang-format  .cpplint.cfg  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  apply_to_repo  pyproject.toml
.config/: clang-format  ruff.toml
.github/workflows/: test.yml
polymath_code_standard/: __init__.py  checker.py  insert_license.py  licenses.py  runner.py  types.py  xml.py  yaml_format.py
polymath_code_standard/checkers/: __init__.py  ansible.py  cmake.py  copyright.py  cpp.py  docker.py  general.py  json.py  markdown.py  python.py  shell.py  toml.py  xml.py  yaml.py
polymath_code_standard/config/: .cpplint.cfg  clang-format  copyright.txt  package_format3.xsd  ruff.toml
test_files/: cpp.cpp  package.xml
tests/: test_copyright.py  test_insert_license_wildcard.py  test_licenses.py  test_runner.py  test_yaml_format.py
