[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polymath-code-standard"
version = "1.1.1"
description = "Polymath Code Standard pre-commit hooks"
requires-python = "==3.10"
dependencies = [
    "lxml>=5.0.0",
    "check-json5 @ git+https://gitlab.com/bmares/check-json5.git@v1.0.0",
    "clang-format==19.1.7",
    "cmakelint==1.4.3",
    "cpplint==2.0.0",
    "hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git@v2.14.0",
    "identify==2.6.18",
    "pre-commit-hooks==5.0.0",
    "pymarkdownlnt==0.9.28",
    "rapidfuzz==3.13.0",
    "ruff==0.11.5",
    "shellcheck-py==0.10.0.1",
    "yamllint==1.34.0",
    "ansible-lint==25.2.1",
]


[tool.setuptools.package-data]
"polymath_code_standard" = ["config/*",  "config/.*"]

[tool.setuptools.packages.find]
exclude = ["test_files*"]

[project.scripts]
polymath_code_standard = "polymath_code_standard.runner:main"
polymath_copyright_header = "polymath_code_standard.insert_license:main"
